# cmp-cov

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/cmp_cov/: cli.py
tests/: conftest.py  test_cli.py
