[project]
name = "cmp-cov"
version = "0.1.0"
description = "Compare local pytest coverage against a saved baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lev Vereshchagin", email = "main@vrslev.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["coverage>=7"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
cmp-cov = "cmp_cov.cli:main"

[[tool.uv.index]]
url = "https://artifactory.raiffeisen.ru/artifactory/api/pypi/remote-pypi/simple"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv]
package = true
